[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/Scenes/Level/AircraftCabin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Character/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/UI/PauseMenu/PauseMenuUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Character/Passenger/Models/PassengerModelSkinny.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Character/Passenger/Models/PassengerModelNormal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Character/Passenger/Passenger.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Character/Passenger/Models/PassengerModelFat.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game/ConfrontationManager/ConfrontationManager.gd" type="Script" id=8]
[ext_resource path="res://Game/UI/ButtonMasher/ButtonMasher.tscn" type="PackedScene" id=9]

[node name="Level" type="Spatial"]

[node name="AircraftCabin" parent="." instance=ExtResource( 1 )]

[node name="ConfrontationManager" type="Spatial" parent="." groups=["ConfrontationManager"]]
script = ExtResource( 8 )

[node name="MainCamera" type="Camera" parent="ConfrontationManager"]
transform = Transform( -0.956443, 0.203733, -0.209069, 0, 0.716187, 0.697908, 0.29192, 0.667509, -0.684992, -4.15276, 13.5999, -12.5844 )
current = true
fov = 30.0

[node name="ConfrotationCamera" type="Camera" parent="ConfrontationManager"]
transform = Transform( -0.611929, 0.29116, -0.73537, 0, 0.929774, 0.368131, 0.790913, 0.22527, -0.568955, -0.00688577, 1.50674, 0.930075 )

[node name="Oppenent1Pos" type="Spatial" parent="ConfrontationManager"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 1.25, 0, 1.25 )

[node name="Oppenent2Pos" type="Spatial" parent="ConfrontationManager"]
transform = Transform( 1, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 1, 1.25, 0, 2 )

[node name="ButtonMasher" parent="ConfrontationManager" instance=ExtResource( 9 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="PauseMenuUI" parent="." instance=ExtResource( 3 )]

[node name="Passenger" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.440903, 0, -1.11538 )

[node name="PassengerModelFat" parent="Passenger" instance=ExtResource( 7 )]

[node name="Passenger2" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.446418, 0, -1.8655 )

[node name="PassengerModelNormal" parent="Passenger2" instance=ExtResource( 5 )]

[node name="Passenger3" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.35098, 0, -1.13744 )

[node name="PassengerModelNormal" parent="Passenger3" instance=ExtResource( 5 )]

[node name="Passenger4" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.3565, 0, -1.88757 )

[node name="PassengerModelSkinny" parent="Passenger4" instance=ExtResource( 4 )]
